Improve Android background delivery and compatibility